--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Mi sitio web</title>
+  </head>
+  <body>
+    <h1>Bienvenido a mi sitio web</h1>
+    <p>¡Hola mundo!</p>
+  </body>
+</html>
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Mi sitio web</title>
+  </head>
+  <body>
+    <h1>Bienvenido a mi sitio web</h1>
+    <p>¡Hola mundo!</p>
+  </body>
+</html>
