--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       </nav>
       
       <article>
-        <h2>Bienvenido a mi blog</h2>
-        <p>¡Hola mundo! En este blog compartiré mis pensamientos e ideas sobre diversos temas. Espero que disfrutes de mis publicaciones.</p>
+        <h2>Bienvenido a SmartCanchasUSM</h2>
+        <p>¡Hola sansan@s! En esta pagina encontrareis todo lo necesario para arrendar una cancha de la universidad.</p>
       </article>
     </section>
     
