--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Blog</a></li>
-          <li><a href="#">Acerca de</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#">Acerca de:</a></li>
+          <li><a href="#">Contacto: daysi.mendieta@usm.cl </a></li>
         </ul>
       </nav>
       
