--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mi blog personal</title>
+    <title>SmartCanchasUSM</title>
     <style>
       body {
         background-color: #f2f2f2;
