--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="#">Blog</a></li>
           <li><a href="#">Acerca de:</a></li>
           <li><a href="#">Contacto: daysi.mendieta@usm.cl </a></li>
+          <li><a href="#">Contenido para administradores</a></li>
         </ul>
       </nav>
       
