--- a/index.html
+++ b/index.html
@@ -3,7 +3,59 @@
   <head>
     <title>SmartCanchasUSM</title>
     <style>
-      /* CSS styles here */
+       cuerpo {
+        color de fondo :  # f2f2f2 ;
+        familia de fuentes : Arial , sans-serif;
+      }
+
+      encabezado {
+        color de fondo :  # 333 ;
+        color : blanco;
+        relleno :  20 px ;
+        alineación de texto : centro;
+      }
+
+      navegación {
+        flotante : izquierda;
+        ancho :  20 % ;
+        color de fondo :  # f1f1f1 ;
+        relleno :  20 px ;
+      }
+
+      navegación  ul {
+        tipo-estilo-lista : ninguno;
+        relleno :  0 ;
+      }
+
+      navegación  li {
+        relleno :  10 px ;
+        borde inferior :  1 px sólido # ddd ;
+      }
+
+      navegación  li  a {
+        decoración de texto : ninguno;
+        color :  # 333 ;
+      }
+
+      artículo {
+        flotante : izquierda;
+        relleno :  20 px ;
+        ancho :  80 % ;
+        color de fondo : blanco;
+      }
+
+      sección :: después de {
+        contenido :  "" ;
+        pantalla : mesa;
+        claro : ambos;
+      }
+
+      pie de página {
+        color de fondo :  # 333 ;
+        color : blanco;
+        relleno :  20 px ;
+        alineación de texto : centro;
+      }
     </style>
   </head>
   <body>
