--- a/index.html
+++ b/index.html
@@ -3,58 +3,58 @@
   <head>
     <title>SmartCanchasUSM</title>
     <style>
-       cuerpo {
-        color de fondo :  # f2f2f2 ;
-        familia de fuentes : Arial , sans-serif;
+             body {
+        background-color: #f2f2f2;
+        font-family: Arial, sans-serif;
       }
 
-      encabezado {
-        color de fondo :  # 333 ;
-        color : blanco;
-        relleno :  20 px ;
-        alineación de texto : centro;
+      header {
+        background-color: #333;
+        color: white;
+        padding: 20px;
+        text-align: center;
       }
 
-      navegación {
-        flotante : izquierda;
-        ancho :  20 % ;
-        color de fondo :  # f1f1f1 ;
-        relleno :  20 px ;
+      nav {
+        float: left;
+        width: 20%;
+        background-color: #f1f1f1;
+        padding: 20px;
       }
 
-      navegación  ul {
-        tipo-estilo-lista : ninguno;
-        relleno :  0 ;
+      nav ul {
+        list-style-type: none;
+        padding: 0;
       }
 
-      navegación  li {
-        relleno :  10 px ;
-        borde inferior :  1 px sólido # ddd ;
+      nav li {
+        padding: 10px;
+        border-bottom: 1px solid #ddd;
       }
 
-      navegación  li  a {
-        decoración de texto : ninguno;
-        color :  # 333 ;
+      nav li a {
+        text-decoration: none;
+        color: #333;
       }
 
-      artículo {
-        flotante : izquierda;
-        relleno :  20 px ;
-        ancho :  80 % ;
-        color de fondo : blanco;
+      article {
+        float: left;
+        padding: 20px;
+        width: 80%;
+        background-color: white;
       }
 
-      sección :: después de {
-        contenido :  "" ;
-        pantalla : mesa;
-        claro : ambos;
+      section::after {
+        content: "";
+        display: table;
+        clear: both;
       }
 
-      pie de página {
-        color de fondo :  # 333 ;
-        color : blanco;
-        relleno :  20 px ;
-        alineación de texto : centro;
+      footer {
+        background-color: #333;
+        color: white;
+        padding: 20px;
+        text-align: center;
       }
     </style>
   </head>
