--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Blog</a></li>
-          <li><a href="#">Acerca de:</a></li>
+          <li><a href="#about">Acerca de nosotros:</a></li>
           <li><a href="#">Contacto: daysi.mendieta@usm.cl </a></li>
           <li><a href="#">Contenido para administradores</a></li>
         </ul>
@@ -107,6 +107,12 @@
         </form>
       </section>
     </article>
+
+    <section id="about">
+      <h3>Acerca de SmartCanchasUSM</h3>
+      <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
+      <p>Si tienes alguna pregunta o sugerencia, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: smartcanchas@usm.cl</p>
+    </section>
 
     
     <footer>
