--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <h3>Acerca de SmartCanchasUSM</h3>
       <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
       <p>Si tienes alguna pregunta respecto al arriendo de canchas, puedes consultar a través del siguiente correo electrónico: FanClubDeMessi@usm.cl</p>
-      <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: FanClubDeMessi@usm.cl</p>
+      <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: FanClubDeMessi@gmail.com</p>
     </section>
 
     
