--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
     </section>
     
     <article>
-      <h2>Título de la publicación</h2>
-      <p>Contenido de la publicación.</p>
+      <h2>Horario del arriendo de canchas</h2>
+      <p>En el siguiente enlace estará una hoja de calculo en donde se puede visualizar los horarios del arriendo de canchas.</p>
+      <p>https.</p>
+      <p>Verde: Disponible para arriendo.</p>
+      <p>Rojo: Ocupado o no habilitado</p>
+      <p>Naranjo: Ocupado por profesor</p>
 
       <section id="comments">
         <h3>Comentarios</h3>
