--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <nav>
         <ul>
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="#Tutorial">Tutorial</a></li>
           <li><a href="#about">Acerca de nosotros:</a></li>
         </ul>
       </nav>
@@ -86,27 +86,8 @@
       <p>Rojo: Ocupado o no habilitado</p>
       <p>Naranjo: Ocupado por profesor</p>
 
-      <section id="comments">
-        <h3>Comentarios</h3>
-        <ul>
-          <li>
-            <strong>Usuario 1:</strong> Comentario 1
-          </li>
-          <li>
-            <strong>Usuario 2:</strong> Comentario 2
-          </li>
-          <!-- ... más comentarios ... -->
-        </ul>
-        <form>
-          <h4>Agregar comentario</h4>
-          <label for="username">Nombre de usuario:</label>
-          <input type="text" id="username" name="username" required>
-
-          <label for="comment">Comentario:</label>
-          <textarea id="comment" name="comment" required></textarea>
-
-          <button type="submit">Enviar</button>
-        </form>
+      <section id="Tutorial">
+        <h3>Tutorial</h3>
       </section>
     </article>
 
