--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
       <section id="Tutorial">
         <h3>Tutorial</h3>
+        <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuente xxxx@gmail.com con el formato mostrado a continuación.</p>
       </section>
     </article>
 
