--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <section id="Tutorial">
         <h3>Tutorial</h3>
         <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuente xxxx@gmail.com con el formato mostrado a continuación.</p>
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/3e091d4f42c6495fcecf80abb9f9598ea19a5c10/Imagen%20de%20prueba%20de%20Matias%20-%20BORRAR.jpg" alt="Imagen de Prueba">
       </section>
     </article>
 
