--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <section id="Tutorial">
         <h3>Tutorial</h3>
         <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuente xxxx@gmail.com con el formato mostrado a continuación.</p>
-        <img src="RMakx2pDO5UitXhluOgEtufCcLRbQsGsUweAGk_e_3U.jpg" alt="Imagen de Prueba">
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/24e6d292002028b7f5f17e030801603b84090e3f/RMakx2pDO5UitXhluOgEtufCcLRbQsGsUweAGk_e_3U.jpg" alt="Imagen de Prueba">
       </section>
     </article>
 
