--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>SmartCanchasUSM</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+      /* Estilos generales */
       body {
         background-color: #f2f2f2;
         font-family: Arial, sans-serif;
@@ -17,9 +19,11 @@
 
       nav {
         float: left;
-        width: 20%;
+        width: 100%;
+        max-width: 400px;
         background-color: #f1f1f1;
         padding: 20px;
+        box-sizing: border-box;
       }
 
       nav ul {
@@ -40,8 +44,8 @@
       article {
         float: left;
         padding: 20px;
-        width: 80%;
-        background-color: white;
+        width: 100%;
+        box-sizing: border-box;
       }
 
       section::after {
@@ -55,6 +59,14 @@
         color: white;
         padding: 20px;
         text-align: center;
+      }
+
+      /* Cambios para dispositivos móviles */
+      @media screen and (max-width: 768px) {
+        nav {
+          width: 100%;
+          max-width: none;
+        }
       }
     </style>
   </head>
