--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <section id="Tutorial">
         <h3>Tutorial</h3>
         <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>
-        <img src="fate.jpg" alt="Imagen de Prueba Fate">
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/4b04118c94f923529aea33a73c912c02dabec5ff/Fate.jpg" alt="Imagen de Prueba Fate">
       </section>
     </article>
 
