--- a/index.html
+++ b/index.html
@@ -116,6 +116,61 @@
     <footer>
       <p>Derechos reservados &copy; 2023</p>
     </footer>
+  <h1>Validación de formulario</h1>
+    <form id="myForm" action="#" method="post">
+      <div>
+        <label for="name">Nombre:</label>
+        <input type="text" id="name" name="name">
+        <span id="nameError"></span>
+      </div>
+      <div>
+        <label for="email">Correo electrónico:</label>
+        <input type="email" id="email" name="email">
+        <span id="emailError"></span>
+      </div>
+      <div>
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password">
+        <span id="passwordError"></span>
+      </div>
+      <button type="submit">Enviar</button>
+    </form>
+
+    <script>
+      const form = document.getElementById('myForm');
+      const nameInput = document.getElementById('name');
+      const emailInput = document.getElementById('email');
+      const passwordInput = document.getElementById('password');
+      const nameError = document.getElementById('nameError');
+      const emailError = document.getElementById('emailError');
+      const passwordError = document.getElementById('passwordError');
+
+      form.addEventListener('submit', function(event) {
+        event.preventDefault();
+        if (nameInput.value === '') {
+          nameError.textContent = 'Por favor, ingrese un nombre';
+        } else {
+          nameError.textContent = '';
+        }
+
+        if (emailInput.value === '') {
+          emailError.textContent = 'Por favor, ingrese un correo electrónico';
+        } else {
+          emailError.textContent = '';
+        }
+
+        if (passwordInput.value === '') {
+          passwordError.textContent = 'Por favor, ingrese una contraseña';
+        } else {
+          passwordError.textContent = '';
+        }
+
+        // Si no hay errores, enviar el formulario
+        if (nameInput.value !== '' && emailInput.value !== '' && passwordInput.value !== '') {
+          form.submit();
+        }
+      });
+    </script>
   </body>
 </html>
 
