--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <section id="Tutorial">
         <h3>Tutorial</h3>
         <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>
-        <img src="https://raw.githubusercontent.com/Matianico07/Matianico07.github.io/main/ImagenPrueba.png" alt="Imagen de Prueba">
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
       </section>
     </article>
 
