--- a/index.html
+++ b/index.html
@@ -117,6 +117,40 @@
     <footer>
       <p>Derechos reservados &copy; 2023</p>
     </footer>
+    
+        <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    
+    <script>
+      // Inicializa Firebase
+      var firebaseConfig = {
+        apiKey: "TU_API_KEY",
+        authDomain: "TU_AUTH_DOMAIN",
+        projectId: "TU_PROJECT_ID",
+        storageBucket: "TU_STORAGE_BUCKET",
+        messagingSenderId: "TU_MESSAGING_SENDER_ID",
+        appId: "TU_APP_ID"
+      };
+      firebase.initializeApp(firebaseConfig);
+
+      // Configura FirebaseUI
+      var uiConfig = {
+        signInSuccessUrl: 'TU_URL_DE_REDIRIGIR_TRAS_LOGIN_EXITOSO',
+        signInOptions: [
+          firebase.auth.EmailAuthProvider.PROVIDER_ID,
+          firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+          firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+          firebase.auth.TwitterAuthProvider.PROVIDER_ID,
+          firebase.auth.GithubAuthProvider.PROVIDER_ID
+        ],
+        tosUrl: 'TU_URL_DE_TERMINOS_Y_CONDICIONES',
+        privacyPolicyUrl: 'TU_URL_DE_POLITICA_DE_PRIVACIDAD'
+      };
+
+      // Inicializa FirebaseUI
+      var ui = new firebaseui.auth.AuthUI(firebase.auth());
+      ui.start('#firebaseui-auth-container', uiConfig);
+    </script>
   </body>
 </html>
 
