--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <nav>
         <ul>
           <li><a href="#">Inicio</a></li>
-          <a href="Accounts/Login.html">Iniciar sesion</a>
+          <div id="firebaseui-auth-container"></div>
           <li><a href="#Tutorial">Tutorial</a></li>
           <li><a href="#about">Acerca de nosotros:</a></li>
         </ul>
