--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
       <p>Derechos reservados &copy; 2023</p>
     </footer>
     
-        <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     
     <script>
       // Inicializa Firebase
       var firebaseConfig = {
-        apiKey: "TU_API_KEY",
+        apiKey: "AIzaSyC0JdRrMRHzLvLhfGWuYP30Zw7TBese2-c",
         authDomain: "TU_AUTH_DOMAIN",
-        projectId: "TU_PROJECT_ID",
+        projectId: "smartcanchasusm",
         storageBucket: "TU_STORAGE_BUCKET",
         messagingSenderId: "TU_MESSAGING_SENDER_ID",
         appId: "TU_APP_ID"
