--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <article>
       <h2>Horario del arriendo de canchas</h2>
       <p>En el siguiente enlace estará una hoja de calculo en donde se puede visualizar los horarios del arriendo de canchas.</p>
-      <p>https.</p>
+      <a href="Planilla/Correo.html">Acerca de</a>
       <p>Verde: Disponible para arriendo.</p>
       <p>Rojo: Ocupado o no habilitado</p>
       <p>Naranjo: Ocupado por profesor</p>
