--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <article>
       <h2>Horario del arriendo de canchas</h2>
       <p>En el siguiente enlace estará una hoja de calculo en donde se puede visualizar los horarios del arriendo de canchas.</p>
-      <a href="Planilla/Correo.html">Acerca de</a>
+      <p>https/</p>
       <p>Verde: Disponible para arriendo.</p>
       <p>Rojo: Ocupado o no habilitado</p>
       <p>Naranjo: Ocupado por profesor</p>
@@ -102,6 +102,7 @@
         <h3>Tutorial</h3>
         <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
+        <a href="Planilla/Correo.html">Acerca de</a>
       </section>
     </article>
 
