--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <h3>Tutorial</h3>
         <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
-        <a href="Planilla/Correo.html">Acerca de</a>
+        <a href="Planilla/Correo.html">Visualizacion Correo de arriendo</a>
       </section>
     </article>
 
