--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -5,13 +5,12 @@
   </head>
   <body>
     <div style="background-color: #f2f2f2; padding: 20px;">
-      <h2 style="color: #333;">¡Hola!</h2>
-      <p>Este es un ejemplo de correo electrónico.</p>
-      <p>Este es el contenido del mensaje.</p>
-      <p>Si tienes alguna pregunta, no dudes en ponerte en contacto con nosotros.</p>
+      <h2 style="color: #333;">Para: SmartCanchasUSM@gmail.com</h2>
+      <h2 style="color: #333;">Asunto: Arriendo de canchas de futbol</h2>
+      <p>Cuerpo: Hola! Solicito arriendo de cancha de futbol para el dia miercoles bloque 5-6.</p>
       <br />
       <p>Saludos cordiales,</p>
-      <p>El equipo de ejemplo</p>
+      <p>Nombre arrendatario</p>
     </div>
   </body>
 </html>
