--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -1,16 +1,122 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Correo electrónico de ejemplo</title>
-  </head>
-  <body>
-    <div style="background-color: #f2f2f2; padding: 20px;">
-      <h2 style="color: #333;">Para: SmartCanchasUSM@gmail.com</h2>
-      <h2 style="color: #333;">Asunto: Arriendo de canchas de futbol</h2>
-      <p>Cuerpo: Hola! Solicito arriendo de cancha de futbol para el dia miercoles bloque 5-6.</p>
-      <br />
-      <p>Saludos cordiales,</p>
-      <p>Nombre arrendatario</p>
-    </div>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Correo electrónico</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			background-color: #f1f1f1;
+			font-family: Arial, sans-serif;
+			font-size: 14px;
+			line-height: 1.5;
+		}
+
+		.container {
+			width: 100%;
+			max-width: 600px;
+			margin: 0 auto;
+			background-color: #ffffff;
+			box-shadow: 0px 0px 20px #d6d6d6;
+			border-radius: 5px;
+			padding: 20px;
+		}
+
+		.header {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			margin-bottom: 20px;
+		}
+
+		.header h1 {
+			margin: 0;
+			font-size: 24px;
+			font-weight: normal;
+			color: #333333;
+			line-height: 1.2;
+		}
+
+		.logo img {
+			max-height: 50px;
+		}
+
+		.sender-info {
+			display: flex;
+			align-items: center;
+		}
+
+		.sender-info img {
+			border-radius: 50%;
+			margin-right: 10px;
+		}
+
+		.sender-info span {
+			color: #999999;
+			font-size: 12px;
+		}
+
+		.subject {
+			font-size: 18px;
+			font-weight: normal;
+			color: #333333;
+			margin-bottom: 10px;
+		}
+
+		.message {
+			color: #555555;
+			line-height: 1.5;
+		}
+
+		.message img {
+			max-width: 100%;
+			margin-bottom: 20px;
+		}
+
+		.btn {
+			display: inline-block;
+			padding: 10px 20px;
+			background-color: #2c3e50;
+			color: #ffffff;
+			border-radius: 3px;
+			text-decoration: none;
+			margin-top: 20px;
+			margin-right: 10px;
+		}
+
+		.btn-secondary {
+			background-color: #eeeeee;
+			color: #333333;
+		}
+
+		.btn-primary:hover {
+			background-color: #34495e;
+		}
+
+		.btn-secondary:hover {
+			background-color: #dddddd;
+		}
+	</style>
+</head>
+  <title>Correo electrónico de ejemplo</title>
+<body>
+	<div class="container">
+		<div class="header">
+			<h1>Asunto del correo</h1>
+			<div class="logo">
+				<img src="https://via.placeholder.com/50x50" alt="Logo">
+			</div>
+		</div>
+		<div class="sender-info">
+			<img src="https://via.placeholder.com/50x50" alt="Avatar">
+			<span>Nombre del remitente &lt;correo@ejemplo.com&gt;</span>
+		</div>
+		<div class="subject">Este es el asunto del correo</div>
+		<div class="message">
+			<p>Este es el cuerpo del mensaje. Hola! Solicito arriendo de cancha de futbol para el dia miercoles bloque 5-6
+    </div class="message">>
   </body>
 </html>
+
