--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -103,18 +103,21 @@
 <body>
 	<div class="container">
 		<div class="header">
-			<h1>Asunto del correo</h1>
+			<h1></h1>
 			<div class="logo">
 				<img src="https://via.placeholder.com/50x50" alt="Logo">
 			</div>
 		</div>
 		<div class="sender-info">
 			<img src="https://via.placeholder.com/50x50" alt="Avatar">
-			<span>Nombre del remitente &lt;correo@ejemplo.com&gt;</span>
+			<span>Nombre Arrendatario &lt;Alumno@USM.cl&gt;</span>
 		</div>
-		<div class="subject">Este es el asunto del correo</div>
+		<div class="subject">Arriendo cancha de tenis</div>
 		<div class="message">
-			<p>Este es el cuerpo del mensaje. Hola! Solicito arriendo de cancha de futbol para el dia miercoles bloque 5-6
+			<p>Hola! Solicito arriendo de cancha de tenis para el dia miércoles bloque 5-6.
+		        <br />
+			<p>Saludos cordiales,</p>
+      			<p>Nombre Arrendatario</p>
     </div class="message">>
   </body>
 </html>
