--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
       <section id="Tutorial">
         <h3>Tutorial</h3>
-        <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>
+        <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>     
+        /* Forma de incluir imagenes en la pagina, idealmente usar tamaño 640x640 y que no supere los 100 kb */
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
         <br />
         <a href="Planilla/Correo.html">Visualizacion Correo de arriendo</a>
