--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -103,7 +103,7 @@
 <body>
 	<div class="container">
 		<div class="header">
-			<h1></h1>
+			<h1>Correo de Prueba</h1>
 			<div class="logo">
 				<img src="https://via.placeholder.com/50x50" alt="Logo">
 			</div>
