--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
       <article>
         <h2>Bienvenido a SmartCanchasUSM</h2>
         <p>¡Hola sansan@s! En esta página encontraréis todo lo necesario para arrendar una cancha de la universidad.</p>
+        <p>Primero, se les proporcionará un archivo de Excel en el que estarán disponibles todos los horarios de las canchas de tenis y fútbol. Los usuarios podrán elegir el horario disponible que mejor se ajuste a sus necesidades y solicitarlo mediante el envío de un correo electrónico a la dirección SmartCanchasUSM@gmail.com.</p>
+        </p>Es importante seguir el formato establecido en el correo electrónico, que debe incluir información como el nombre de la persona que hará la reserva, el día y el bloque de tiempo deseado. Una vez enviado el correo, se recibirá una confirmación de que la reserva se ha realizado con éxito, y el archivo de Excel se actualizará para reflejar la reserva.</p>
+        </p>En resumen, para reservar una cancha de tenis o fútbol, los usuarios deben revisar el archivo de Excel proporcionado, enviar un correo electrónico siguiendo el formato establecido e incluyendo la información necesaria, esperar la confirmación de la reserva y verificar que el archivo de Excel haya sido actualizado..</p>
       </article>
     </section>
     
@@ -101,7 +104,6 @@
       <section id="Tutorial">
         <h3>Tutorial</h3>
         <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>     
-        /* Forma de incluir imagenes en la pagina, idealmente usar tamaño 640x640 y que no supere los 100 kb */
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
         <br />
         <a href="Planilla/Correo.html">Visualizacion Correo de arriendo</a>
