--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     
     <article>
       <h2>Horario del arriendo de canchas</h2>
-      <p>En el siguiente enlace estará una hoja de calculo en donde se puede visualizar los horarios del arriendo de canchas.</p>
+      <p>Es importante mencionar que el proceso de arriendo de canchas se inicia todos los jueves a las 9 AM, para la semana siguiente. Es decir, los usuarios podrán hacer sus reservas para la semana siguiente a partir de este horario. Se recomienda a los usuarios que realicen sus reservas lo antes posible, ya que los horarios más solicitados pueden llenarse rápidamente.</p> 
+      <p>En el siguiente enlace estará la hoja de calculo en donde se puede visualizar los horarios del arriendo de las canchas.</p>
       <p>https/</p>
       <p>Verde: Disponible para arriendo.</p>
       <p>Rojo: Ocupado o no habilitado</p>
