--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       <nav>
         <ul>
           <li><a href="#">Inicio</a></li>
-          <li><a href="#Tutorial">Tutorial</a></li>
+          <li><a href="#Horarios">Horarios de las canchas</a></li>
+          <li><a href="#Solicitud">Correo para arriendo</a></li>
           <li><a href="#about">Acerca de nosotros:</a></li>
         </ul>
       </nav>
@@ -94,16 +95,18 @@
     </section>
     
     <article>
-      <h2>Horario del arriendo de canchas</h2>
-      <p>Es importante mencionar que el proceso de arriendo de canchas se inicia todos los jueves a las 9 AM, para la semana siguiente. Es decir, los usuarios podrán hacer sus reservas para la semana siguiente a partir de este horario. Se recomienda a los usuarios que realicen sus reservas lo antes posible, ya que los horarios más solicitados pueden llenarse rápidamente.</p> 
-      <p>En el siguiente enlace estará la hoja de calculo en donde se puede visualizar los horarios del arriendo de las canchas.</p>
-      <p>https/</p>
-      <p>Verde: Disponible para arriendo.</p>
-      <p>Rojo: Ocupado o no habilitado</p>
-      <p>Naranjo: Ocupado por profesor</p>
+      <section id="Horarios">
+        <h2>Horario del arriendo de canchas</h2>
+        <p>Es importante mencionar que el proceso de arriendo de canchas se inicia todos los jueves a las 9 AM, para la semana siguiente. Es decir, los usuarios podrán hacer sus reservas para la semana siguiente a partir de este horario. Se recomienda a los usuarios que realicen sus reservas lo antes posible, ya que los horarios más solicitados pueden llenarse rápidamente.</p> 
+        <p>En el siguiente enlace estará la hoja de calculo en donde se puede visualizar los horarios del arriendo de las canchas.</p>
+        <p>https/</p>
+        <p style="color: green;">Verde: Disponible para arriendo.</p>
+        <p style="color: red;">Rojo: Ocupado o no habilitado</p>
+        <p style="color: orange;">Naranjo: Ocupado por profesor</p>
+      </section>
 
-      <section id="Tutorial">
-        <h3>Tutorial</h3>
+      <section id="Solicitud">
+        <h3>Solicitud de arriendo</h3>
         <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>     
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
         <br />
