--- a/index.html
+++ b/index.html
@@ -107,17 +107,19 @@
 
       <section id="Solicitud">
         <h3>Solicitud de arriendo</h3>
-        <p>Los Estudiantes deberan visualizar en la hoja de calculo el horario que deseen y este disponible y luego mandar un correo a la siguiente cuenta xxxx@gmail.com con el formato mostrado a continuación.</p>     
-        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
-        <br />
+        <p>Para solicitar canchas deben mandar correo a SmartCanchasUSM@gmail.com con el siguiente formato</p>   
         <a href="Planilla/Correo.html">Visualizacion Correo de arriendo</a>
+        <p>A continuación se muestra una imagen de ejemplo de correo</p> 
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
+        <p>Una vez enviado el correo usted recibira un correo con los detalles del arriendo, o en caso de un error un mensaje de la causa del error. </p> 
+        <br />
       </section>
     </article>
 
     <section id="about">
       <h3>Acerca de SmartCanchasUSM</h3>
       <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
-      <p>Si tienes alguna pregunta respecto al arriendo de canchas, puedes consultar a través del siguiente correo electrónico: FanClubDeMessi@usm.cl</p>
+      <p>Si tienes alguna pregunta respecto al arriendo de canchas, puedes consultar a través del siguiente correo electrónico: FanClubDeMessi@gmail.com</p>
       <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: FanClubDeMessi@gmail.com</p>
     </section>
 
