--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h2>Bienvenido a SmartCanchasUSM</h2>
         <p>¡Hola sansan@s! En esta página encontraréis todo lo necesario para arrendar una cancha de tenios o futbol de la universidad.</p>
         <p>Primero, se les proporcionará un enlace a un excel en la cual estarán disponibles todos los horarios de las canchas de tenis y fútbol. Ustedes podrán elegir el horario disponible que mejor se ajuste a sus necesidades y solicitarlo mediante el envío de un correo electrónico a la dirección SmartCanchasUSM@gmail.com.</p>
-        <p>Es importante seguir el formato establecido (<a href="Planilla/Correo.html">Ver aqui</a>) en el correo electrónico, que debe incluir información como el nombre de la persona que hará la reserva, el día y el bloque de tiempo deseado. Una vez enviado el correo, se recibirá una confirmación de que la reserva se ha realizado con éxito, y el Excel se actualizará para reflejar la reserva.</p>
+        <p>Es importante seguir el formato establecido (<a href="Planilla/Correo.html">Ver aqui<a>) en el correo electrónico, que debe incluir información como el nombre de la persona que hará la reserva, el día y el bloque de tiempo deseado. Una vez enviado el correo, se recibirá una confirmación de que la reserva se ha realizado con éxito, y el Excel se actualizará para reflejar la reserva.</p>
         <p>A continuación podran visualizar un video del proceso completo:</p>
       </article>
     </section>
