--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
         <a href="Planilla/Correo.html">Visualizacion Correo de arriendo</a>
         <p>A continuación se muestra una imagen de ejemplo de correo</p> 
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Imagen de Prueba">
-        <p>Una vez enviado el correo usted recibira un correo con los detalles del arriendo, o en caso de un error un mensaje de la causa del error. </p> 
+        <p>Una vez enviado el correo usted recibira un correo con los detalles del arriendo, o en caso de un error un mensaje de la causa del error. </p>
+        <p>Ejemplo de arriendo exitoso: </p> 
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Correo de arriendo exitoso">
+        <p>Ejemplo de arriendo fallido: En este caso debido a que alguien más ya a arrendado la cancha para el horario seleccionado</p> 
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba.png?raw=true" alt="Correo de arriendo fallido">
         <br />
       </section>
     </article>
