--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <section id="Solicitud">
         <h3>Solicitud de arriendo</h3>
         <p>Para solicitar canchas deben mandar correo a SmartCanchasUSM@gmail.com con el siguiente formato</p>   
-        <a href="Planilla/Correo.html">Visualizacion Correo de arriendo</a>
+        <a href="Planilla/Correo.html">Visualizacion correo de arriendo</a>
         <p>A continuación se muestra una imagen de ejemplo de correo</p> 
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Imagen de Prueba">
         <p>Una vez enviado el correo usted recibira un correo con los detalles del arriendo, o en caso de un error un mensaje de la causa del error. </p>
