--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -100,25 +100,19 @@
 		}
 	</style>
 </head>
-<body>
-	<div class="container">
-		<div class="header">
-			<h1>Correo de Prueba</h1>
-			<div class="logo">
-				<img src="https://via.placeholder.com/50x50" alt="Logo">
-			</div>
-		</div>
-		<div class="sender-info">
-			<img src="https://via.placeholder.com/50x50" alt="Avatar">
-			<span>Nombre Arrendatario &lt;Alumno@USM.cl&gt;</span>
-		</div>
-		<div class="subject">Arriendo cancha de tenis</div>
-		<div class="message">
-			<p>Hola! Solicito arriendo de cancha de tenis para el dia miércoles bloque 5-6.
-		        <br />
-			<p>Saludos cordiales,</p>
-      			<p>Nombre Arrendatario</p>
-    </div class="message">>
+<head>
+    <title>Solicitud de arriendo de cancha</title>
+  </head>
+  <body>
+    <p>Asunto: Solicitud de arriendo de cancha de [fútbol/futbol/tenis]</p>
+    <p>Contenido:</p>
+    <p>Solicito arrendar los siguientes horarios por orden de prioridad:</p>
+    <ul>
+      <li>[Día] [Horario]</li>
+      <li>[Día] [Horario]</li>
+      <li>[Día] [Horario]</li>
+    </ul>
+    <p>Saludos cordiales, [Nombre completo] - [Rol USM].</p>
   </body>
 </html>
 
