--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -60,6 +60,7 @@
     <h1>Formato para la solicitud de arriendo de cancha</h1>
     <p><strong>Asunto:</strong> Solicitud de arriendo de cancha de [fútbol/futbol/tenis]</p>
     <p><strong>Contenido:</strong></p>
+    <p>"Solicito arrendar los siguientes horarios por orden de prioridad:</p>
     <ul>
       <li>[Día] [Horario]</li>
       <li>[Día] [Horario]</li>
