--- a/Planilla/Conversor.html
+++ b/Planilla/Conversor.html
@@ -19,6 +19,8 @@
 	</style>
 </head>
 <body>
+	<h1>Horarios de clases</h1>
+	<p>A continuación se muestra una tabla con los horarios de clases para el semestre actual:</p>
 	<table>
 		<tr>
 			<th>Bloque</th>
